--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -3,7 +3,8 @@ Version: 0.2-13
 Date: 2014-07-21
 Title: Measuring Inequality, Concentration, and Poverty
 Authors@R: c(person(given = "Achim", family = "Zeileis", role = c("aut", "cre"), email = "Achim.Zeileis@R-project.org"),
-             person(given = "Christian", family = "Kleiber", role = "ctb", email = "Christian.Kleiber@unibas.ch"))
+             person(given = "Christian", family = "Kleiber", role = "ctb", email = "Christian.Kleiber@unibas.ch"),
+             person(given = "Bastiaan", family = "Quast", role = "ctb", email = "BQuast@gmail.com"))
 Description: Inequality, concentration, and poverty measures. Lorenz curves (empirical and theoretical).
 Depends: R (>= 2.10.0)
 Imports: stats, graphics, grDevices
